--- a/client/topmate-readme-badge/public/index.html
+++ b/client/topmate-readme-badge/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Topmate README Badge Generator</title>
+  <title>Topmate.io README Badge Generator</title>
 </head>
 
 <body>
