Added meta tags

--- a/client/topmate-readme-badge/public/index.html
+++ b/client/topmate-readme-badge/public/index.html
@@ -8,7 +8,38 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Style your GitHub Profile README with an awesome Topmate.io markdown Badge" />
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description"
+		content="Style your GitHub Profile README with an awesome Topmate.io markdown Badge">
+	<meta name="robots" content="index,follow">
+	<meta name="author" content="Vinit Shahdeo & Yashvi Mahapatra">
+	<meta name="email" content="vinitshahdeo@gmail.com">
+	<meta name="copyright" content="Vinit Shahdeo 2022" />
+
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Topmate.io README Badge Generator" />
+	<meta property="og:description"
+		content="Style your GitHub Profile README with an awesome Topmate.io markdown Badge" />
+
+	<meta property="og:image" content="https://raw.githubusercontent.com/vinitshahdeo/topmate-readme-badge/main/public/images/topmate-og-image.png" />
+	<meta property="og:url" content="topmate-readme-badge.netlify.app" />
+	<meta property="og:site_name" content="Topmate.io README Badge Generator" />
+
+	<meta name="twitter:card" content="website">
+	<meta name="twitter:site" content="Topmate.io README Badge Generator">
+	<meta name="twitter:title" content="Topmate.io README Badge Generator">
+	<meta name="twitter:description"
+		content="Style your GitHub Profile README with an awesome Topmate.io markdown Badge">
+	<meta name="twitter:creator" content="@Vinit_Shahdeo">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/vinitshahdeo/topmate-readme-badge/main/public/images/topmate-og-image.png">
+
+	<meta itemprop="name" content="Topmate.io README Badge Generator">
+	<meta itemprop="description"
+		content="Style your GitHub Profile README with an awesome Topmate.io markdown Badge">
+	<meta itemprop="image" content="https://raw.githubusercontent.com/vinitshahdeo/topmate-readme-badge/main/public/images/topmate-og-image.png">
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
